# 74181

./: .gitignore  74181.c  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  main  processors.json  risultato_operazione.txt  test  vcpkg.json
.github/workflows/: 74181-workbench.yml  CMakeLists.txt  benchmark.py  benchmark.yml  c-cpp.yml  checkmarx-one.yml  cmake-single-platform.yml  dependency-review.yml  msvc.yml  telemetry.yml  workbench.yml
ALLEGATI/: manuale.md  spiegazione.txt
scripts/: run_benchmark.py
test_inputs/alu32/: add_32bit_max.txt  alternating_bits.txt  full_ones.txt  invalid_decimal.txt  sub_32bit_overflow.txt
test_inputs/alu4/: add_mode.txt  and_mode.txt  carry_propagate.txt  invalid_bits.txt  max_operands.txt  or_mode.txt  zero_operands.txt
test_inputs/bin2dec/: invalid_char.txt  max32.txt  one.txt  zero.txt
test_inputs/calc/: complex_expr.txt  division_by_zero.txt txt  invalid_expr.txt  parentheses.txt  simple_sum.txt
test_inputs/dec2bin/: max32.txt  negative.txt  one.txt  zero.txt
